--- a/variable.html
+++ b/variable.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
-    <script src="some.js"></script>
+    <script src="var.js"></script>
 </body>
 </html>
