--- a/string.html
+++ b/string.html
@@ -6,18 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is jscript</p>
-    <p>hey i am siri</p>
-
-
-    SNOB'N'US
-    STRING
-    NUMBER
-    OBJECT
-    BOOLEAN
-    NULL
-    UNDEFINED
-    SYMBOL 
-    <script src="var.js"></script>
+    <h1>hey</h1>
+    <script src="string.js"></script>
 </body>
 </html>
