--- a/01basics/string.html
+++ b/01basics/string.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>hey</h1>
-    <script src="object.js"></script>
+    <script src="/01basics/null&undef.js"></script>
 </body>
 </html>
