today learned about custom function

--- a/02fun/function.html
+++ b/02fun/function.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <p>hey we are selecting</p>
-    <script>
+    <!-- <script>
         const p = document.querySelectorAll('p')
         console.log(p);
-    </script>
+    </script> -->
+    <script src="cs.js"></script>
 </body>
 </html>
