learned to declare funct and method

--- a/02fun/function.html
+++ b/02fun/function.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <p>hey we are selecting</p>
+<button class="clickme">click me!</button>
     <!-- <script>
         const p = document.querySelectorAll('p')
         console.log(p);
     </script> -->
-    <script src="cs.js"></script>
+    <script src="waytomakefunc.js"></script>
 </body>
 </html>
