today learned about Debugging and Debugging tools...!

--- a/02fun/function.html
+++ b/02fun/function.html
@@ -8,10 +8,11 @@
 <body>
   <p>hey we are selecting</p>
 <button class="clickme">click me!</button>
+
     <!-- <script>
         const p = document.querySelectorAll('p')
         console.log(p);
     </script> -->
-    <script src="waytomakefunc.js"></script>
+    <script src="debugging.js"></script>
 </body>
 </html>
