today learned about classes

--- a/theDom/index.html
+++ b/theDom/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Dom</title>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, eos.</p>
     </div>
@@ -30,7 +30,16 @@
         h2 span{
             color:red;
         }
+    </style> -->
+    <style>
+.round{
+    border-radius: 200px;
+   transform: rotate(1turn)scale(2);
+   box-shadow: 0 0 10px black;
+}
     </style>
-        <script src="S-element.js"></script>
+     
+    <img class="round" src="img/th.jpg" alt="img" height="300">
+        <script src="classes.js"></script>
 </body>
 </html>
