today learned about data attribute

--- a/theDom/index.html
+++ b/theDom/index.html
@@ -38,8 +38,9 @@
    box-shadow: 0 0 10px black;
 }
     </style>
-     
-    <img class="round" src="img/th.jpg" alt="img" height="300">
+     <img class="round" data-name="wes" data-last="bos" src="img/th.jpg" alt="img" >
+     <img class="huge" data-name="kait" data-last="boseee" src="img/th.jpg" alt="img" >
+    <img class="vogue" data-name="RAM" data-last="bos" src="img/th.jpg" alt="img" >
         <script src="classes.js"></script>
 </body>
 </html>
