today learned about creating html element

--- a/theDom/index.html
+++ b/theDom/index.html
@@ -32,15 +32,15 @@
         }
     </style> -->
     <style>
-.round{
+/* .round{
     border-radius: 200px;
    transform: rotate(1turn)scale(2);
    box-shadow: 0 0 10px black;
-}
-    </style>
+} */
+    /* </style>
      <img class="round" data-name="wes" data-last="bos" src="img/th.jpg" alt="img" >
      <img class="huge" data-name="kait" data-last="boseee" src="img/th.jpg" alt="img" >
-    <img class="vogue" data-name="RAM" data-last="bos" src="img/th.jpg" alt="img" >
-        <script src="classes.js"></script>
+    <img class="vogue" data-name="RAM" data-last="bos" src="img/th.jpg" alt="img" > */
+        <script src="creating.js"></script>
 </body>
 </html>
