today learned about Traversing and removing nodes

--- a/theDom/index.html
+++ b/theDom/index.html
@@ -6,19 +6,17 @@
     <title>The Dom</title>
 </head>
 <body>
-    <!-- <div>
+    <p class="wes">hey i am wes , i <em>love</em>you bos</p>
+    <div class="item">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, eos.</p>
-    </div>
-    <div class="item">
         <p>hey i am div.</p>
         <p>hey i am second div.</p>
-    </div>
-    <div class="item">
         <p>hey i am div.</p>
         <p class="pizza">Hey I'm pizza.</p>
     </div>
-    <article class="item2">
+
+    <article class=" item item2">
         <h2>hey i am article
             <span>
                 hey i am hidden
@@ -30,7 +28,7 @@
         h2 span{
             color:red;
         }
-    </style> -->
+    </style>
     <style>
 /* .round{
     border-radius: 200px;
@@ -41,6 +39,6 @@
      <img class="round" data-name="wes" data-last="bos" src="img/th.jpg" alt="img" >
      <img class="huge" data-name="kait" data-last="boseee" src="img/th.jpg" alt="img" >
     <img class="vogue" data-name="RAM" data-last="bos" src="img/th.jpg" alt="img" > */
-        <script src="creating.js"></script>
+        <script src="traversing.js"></script>
 </body>
 </html>
