--- a/theDom/index.html
+++ b/theDom/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Dom</title>
 </head>
-<body>
-    <p class="wes">hey i am wes , i <em>love</em>you bos</p>
+<body style="background-color: orange;color: white;">
+    <!-- <p class="wes">hey i am wes , i <em>love</em>you bos</p>
     <div class="item">
         <p>Lorem ipsum dolor sit amet.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, eos.</p>
@@ -30,8 +30,8 @@
         }
     </style>
     <style>
-/* .round{
-    border-radius: 200px;
+/* .round{ -->
+    <!-- border-radius: 200px;
    transform: rotate(1turn)scale(2);
    box-shadow: 0 0 10px black;
 } */
@@ -39,6 +39,8 @@
      <img class="round" data-name="wes" data-last="bos" src="img/th.jpg" alt="img" >
      <img class="huge" data-name="kait" data-last="boseee" src="img/th.jpg" alt="img" >
     <img class="vogue" data-name="RAM" data-last="bos" src="img/th.jpg" alt="img" > */
-        <script src="traversing.js"></script>
+        <script src="cardio.js"></script> -->
+        <button class="delete" type="button">&times;delete</button>
+        <script src="cardio.js"></script>
 </body>
 </html>
