--- a/event/index.html
+++ b/event/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eventlistener</title>
 </head>
 <body>
     <button class="butts">click me</button>
-    <script src="Eventlist"></script>
+
+    <h2>buy button!</h2>
+    <button class="buy">buy item 1</button>
+    <button class="buy">buy item 2</button>
+    <button class="buy">buy item 3</button>
+    <button class="buy">buy item 4</button>
+    <button class="buy">buy item 5</button>
+    <button class="buy">buy item 6</button>
+    <button class="buy">buy item 7</button>
+    <button class="buy">buy item 8</button>
+    <button class="buy">buy item 9</button>
+    <button class="buy">buy item 10</button>
+
+    <script src="Eventlist.js"></script>
 </body>
 </html>
