today learned about capturephase and bubblingphase

--- a/event/index.html
+++ b/event/index.html
@@ -9,16 +9,19 @@
     <button class="butts">click me</button>
 
     <h2>buy button!</h2>
-    <button  data-price="100" class="buy">buy item 1</button>  
-    <button  data-price="200" class="buy">buy item 2</button> 
-    <button  data-price="300" class="buy">buy item 3</button> 
-    <button  data-price="400" class="buy">buy item 4</button>  
-    <button  data-price="500" class="buy">buy item 5</button>  
-    <button  data-price="600" class="buy">buy item 6</button> 
-    <button  data-price="700" class="buy">buy item 7</button>
-    <button  data-price="800" class="buy">buy item 8</button>  
-    <button  data-price="900" class="buy">buy item 9</button> 
-    <button  data-price="1000" class="buy">buy item 10</button> 
+    <button  data-price="100" class="buy">buy item <strong>1</strong></button>  
+    <button  data-price="200" class="buy">buy item  <strong>2</strong></button> 
+    <button  data-price="300" class="buy">buy item <strong>3</strong></button> 
+    <button  data-price="400" class="buy">buy item <strong>4</strong></button>  
+    <button  data-price="500" class="buy">buy item <strong>5</strong></button>  
+    <button  data-price="600" class="buy">buy item <strong>6</strong></button> 
+    <button  data-price="700" class="buy">buy item <strong>7</strong></button>
+    <button  data-price="800" class="buy">buy item <strong>8</strong></button>  
+    <button  data-price="900" class="buy">buy item <strong>9</strong></button> 
+    <button  data-price="1000" class="buy">buy item <strong>10</strong>r</button> 
+
+
+    <img class="photo" src="img/th.jpg" alt="img">
     <script src="Eventlist.js"></script>
 </body>
 </html>
