today learned about form

--- a/event/index.html
+++ b/event/index.html
@@ -6,7 +6,7 @@
     <title>Eventlistener</title>
 </head>
 <body>
-    <button class="butts">click me</button>
+    <!-- <button class="butts">click me</button>
 
     <h2>buy button!</h2>
     <button  data-price="100" class="buy">buy item <strong>1</strong></button>  
@@ -21,7 +21,21 @@
     <button  data-price="1000" class="buy">buy item <strong>10</strong>r</button> 
 
 
-    <img class="photo" src="img/th.jpg" alt="img">
-    <script src="Eventlist.js"></script>
+    <img class="photo" src="img/th.jpg" alt="img"> -->
+    <div class="wrapper">
+        <a href="https://google.com" class="google">Hey Google</a><br><br>
+        <form name="signup">
+            <label for="name">name:</label>
+            <input type="name" id="name" name="name"><br>
+            <label for="email">email:</label>
+            <input type="email" id="email" name="email" value="@gmail.com"><br>
+            <input required type="checkbox" id="agree" name="agree"><label for="agree">I AGREE TO TERMS AND CONDTION</label>
+            <hr>
+            <button type="submit">SUBMIT</button>
+        </form>
+    </div>
+
+
+    <script src="form.js"></script>
 </body>
 </html>
