today learned about keyboardevent

--- a/event/index.html
+++ b/event/index.html
@@ -35,6 +35,7 @@
         </form>
     </div>
 
+        <img class="photoimg" tabindex="0" src="img/th.jpg" alt="img" width="200" height="200">
 
     <script src="form.js"></script>
 </body>
