--- a/practicesketch/index.html
+++ b/practicesketch/index.html
@@ -6,7 +6,7 @@
     <title>PSketch</title>
 </head>
 <body>
-    <div class="canvaswrap">
+    <!-- <div class="canvaswrap">
         <canvas width="1600" height="1000" id="etch-e-sketch"></canvas>
         <div class="buttons">
             <button class="shake">shake!</button>
@@ -57,6 +57,101 @@
                 transform: translate3d(4px,0,0);
             }
         }
-    </style>    
+    </style>     -->
+    <div class="cards">
+        <div class="card" data-description="ganpati bnappa img">
+            <img class="imgphoto" src="img/free-photo-of-view-of-a-religious-colorful-figurine.jpeg" alt="wes bos !" width="200" > 
+            <br>
+            <h2>hey Ganpati</h2>
+            <button>learnmore!</button>
+        </div>
+        <div class="card" data-description="hey i am ganesha">
+            <img class="imgphoto" src="img/free-photo-of-view-of-a-religious-colorful-figurine.jpeg" alt="wes hello !" width="200" > 
+            <br>
+            <h2>hey Ganpati</h2>
+            <button>learnmore!</button>
+        </div>
+        <div class="card" data-description="hey i am ganpati">
+            <img class="imgphoto" src="img/free-photo-of-view-of-a-religious-colorful-figurine.jpeg" alt="wesbiisss !" width="200" > 
+            <br>
+            <h2>hey Ganpati</h2>
+            <button>learnmore!</button>
+        </div>
+        <div class="card" data-description="hey i am bappa">
+            <img class="imgphoto" src="img/free-photo-of-view-of-a-religious-colorful-figurine.jpeg" alt="wes kait !" width="200" > 
+            <br>
+            <h2>hey Ganpati</h2>
+            <button>learnmore!</button>
+        </div>
+    </div>
+
+    <div class="model-outer">
+        <div class="model-inner">
+
+        </div>
+    </div>
+
+    <script src="clickoutside.js"></script>
+    <style>
+        .cards{
+            display: grid;
+            grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+            grid-gap: 20px;
+            padding: 2rem;
+        }
+        .card{
+            border-radius: 2px;
+            justify-items: center;
+            padding: 1rem;
+        }
+        .card h2{
+            color: black;
+        }
+        .card button{
+            font-size: 20px;
+            background-color: antiquewhite;
+        }
+        .card img{
+        width: 200;
+        }
+        .model-outer{
+            display: grid;
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 100vw;
+            background-color: hsla(50%,100%,50%,0.7);
+            justify-content: center;
+            align-items: center;
+            /* hide this model untill we need it */
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s;
+        }
+        .model-outer.open{
+            pointer-events: all;
+            opacity: 1;
+        }
+        .model-outer img{
+            width:400px;
+            /* background-color: #333333; */
+        }
+        .model-inner{
+            max-width: 600px;
+            opacity: 0.9;
+            min-height: 500px;
+            color: white;
+            background-color: black;
+            min-width: 400px;
+            padding: 2rem;
+            border-radius: 5px;
+            transform: translateY(-200%);
+            transition: transform 2s;
+        }
+        .model-outer.open .model-inner{
+            transform: translateY(0);
+        }
+    </style>
 </body>
 </html>
