today i have revised clickoutside section again

--- a/practicesketch/index.html
+++ b/practicesketch/index.html
@@ -58,8 +58,9 @@
                 transform: translate3d(4px,0,0);
             }
         }
-    </style>     -->
-    <!-- section34.............................................
+   </style>     -->
+   
+    section34.............................................
     <div class="cards">
         <div class="card" data-description="ganpati bnappa img">
             <img class="imgphoto" src="img/free-photo-of-view-of-a-religious-colorful-figurine.jpeg" alt="wes bos !" width="200" > 
@@ -154,7 +155,7 @@
         .model-outer.open .model-inner{
             transform: translateY(0);
         }
-    </style> -->
+    </style> 
 
     <!-- <div class="wrapper">
         <div class="terms-and-conditions">
@@ -243,7 +244,7 @@
 
         <!-- section tabs -->
 
-        <div class="wrapper">
+        <!-- <div class="wrapper">
             <div class="tabs">
               <div role="tablist" aria-label="Programming Languages">
                 <button role="tab" aria-selected="true" id="js">
@@ -265,7 +266,7 @@
                 <p>PHP is great!</p>
               </div>
             </div>
-          </div>
+          </div> -->
        <script src="tabs.js"></script>
       </body>
 </html>
