today learned about bedmas

--- a/logicandfullctrl/index.html
+++ b/logicandfullctrl/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p><abbr>H</abbr>ello</p>
-    <p><abbr>H</abbr>ello</p>
-    <p><abbr>H</abbr>ello</p>
-    <p><abbr>H</abbr>ello</p>
-    <p><abbr>H</abbr>ello</p>
+    <p><abbr style="font-size: 50px;">H</abbr>ello</p>
+    <p><abbr style="font-size: 50px;">H</abbr>ello</p>
+    <p><abbr style="font-size: 50px;">H</abbr>ello</p>
+    <p><abbr style="font-size: 50px;">H</abbr>ello</p>
+    <p><abbr style="font-size: 50px;">H</abbr>ello</p>
 
+
+    <script>
+        function calculatebill(billamount,taxbill=0.13,taxtip=0.15){
+            // console.log('calculated bill!');
+            const total=billamount+billamount*taxbill+billamount*taxbill;
+            return total;
+        }
+        const total=126+(25.20-18.9);
+    </script>
 </body>
 </html>
