--- a/logicandfullctrl/index.html
+++ b/logicandfullctrl/index.html
@@ -14,13 +14,14 @@
     <p><abbr style="font-size: 50px;">H</abbr>ello</p>
 
 
-    <script>
+    <!-- <script>
         function calculatebill(billamount,taxbill=0.13,taxtip=0.15){
             // console.log('calculated bill!');
             const total=billamount+billamount*taxbill+billamount*taxbill;
             return total;
         }
         const total=126+(25.20-18.9);
-    </script>
+    </script> -->
+    <script src="ifelse.js"></script>
 </body>
 </html>
