--- a/logicandfullctrl/index.html
+++ b/logicandfullctrl/index.html
@@ -17,10 +17,10 @@
         .turt{
             --x:0px;
             --y:0px;
-            --rotate:0;
+            --rotateX:0;
             --rotate:0;
             position: relative;
-            transform:translateX(var(--x)) translateY(var(--y)) rotateY(var(--rotate))rotate(var(--rotate));
+            transform:translateX(var(--x)) translateY(var(--y)) rotateY(var(--rotate))rotate(var(--rotateX));
             transition: transform 0.2s;
         }
     </style>
@@ -33,6 +33,6 @@
         }
         const total=126+(25.20-18.9);
     </script> -->
-    <script src="section40.js"></script>
+    <script src="section41.js"></script>
 </body>
 </html>
