--- a/datatypes/index.html
+++ b/datatypes/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <input type="text" name="first" value="ketan">
+    <script src="https://unpkg.com/lodash"></script>
     <script src="object.js"></script>
 </body>
 </html>
