--- a/datatypes/index.html
+++ b/datatypes/index.html
@@ -8,6 +8,8 @@
 <body>
     <input type="text" name="first" value="ketan">
     <script src="https://unpkg.com/lodash"></script>
-    <script src="object.js"></script>
+
+    <ul class="prizes"></ul>
+    <script src="maps.js"></script>
 </body>
 </html>
