today learned about array

--- a/datatypes/index.html
+++ b/datatypes/index.html
@@ -10,6 +10,6 @@
     <script src="https://unpkg.com/lodash"></script>
 
     <ul class="prizes"></ul>
-    <script src="maps.js"></script>
+    <script src="Array.js"></script>
 </body>
 </html>
