today learned about for for in while loop

--- a/getinlooping/index.html
+++ b/getinlooping/index.html
@@ -6,6 +6,6 @@
     <title>GetinLooping</title>
 </head>
 <body>
-<script src="section49.js"></script>
+<script src="loop.js"></script>
 </body>
 </html>
