--- a/facedetector/index.html
+++ b/facedetector/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FACEDETECTOR</title>
-</head>
-<style>
+  <meta charset="UTF-8">
+  <title>Censorship</title>
+  <style>
     * {
       box-sizing: border-box;
     }
@@ -31,13 +30,28 @@
     .face {
       position: absolute;
     }
-  </style> 
+  </style>
+</head>
+
 <body>
-    <div class="wrap">
-        <video class="webcam"></video>
-        <canvas class="video"></canvas>
-        <canvas class="face"></canvas>
-      </div>
-<script src="pixeled.js"></script>
+  <div class="controls">
+    <label for="SCALE">
+      SCALE:
+      <input value="1.35" type="range" name="SCALE" min="0.3" max="3" step="0.1">
+    </label>
+    <label for="SIZE">
+      SIZE:
+      <input value="10" type="range" name="SIZE" min="1" max="100" step="1">
+    </label>
+  </div>
+  <div class="wrap">
+    <video class="webcam"></video>
+    <canvas class="video"></canvas>
+    <canvas class="face"></canvas>
+  </div>
+  <script src="pixeled.js"></script>
+
+
 </body>
+
 </html>
