today learned about async await

--- a/proawitsyn/index.html
+++ b/proawitsyn/index.html
@@ -6,6 +6,6 @@
     <title>PROAWITSYC</title>
 </head>
 <body>
-    <script src="promise.js"></script>
+    <script src="asyncwait.js"></script>
 </body>
 </html>
